Implemented HTTP mock server. Started working on SFTP mock server.